Enhance useAlert composable for internationalization support
- Updated the `useAlert` composable to utilize the `useI18n` function for dynamic message translations, improving user feedback for validation errors.
- Added new translation keys for validation error messages in multiple languages, ensuring consistent user experience across different locales.

These changes aim to enhance the alert system by providing localized messages, improving accessibility and user interaction.

--- a/client/i18n/lang/ar.json
+++ b/client/i18n/lang/ar.json
@@ -66,6 +66,8 @@
                 "failedIntent": "فشل في إنشاء نية الدفع.",
                 "processingFailed": "فشلت معالجة الدفع."
             }
-        }
+        },
+        "validation_error": "خطأ في التحقق",
+        "validation_error_with_count": "خطأ في التحقق ({count} حقول)"
     }
 } 
