--- a/client/i18n/lang/ta.json
+++ b/client/i18n/lang/ta.json
@@ -66,6 +66,8 @@
                 "failedIntent": "பணம் செலுத்தும் நோக்கத்தை உருவாக்க முடியவில்லை.",
                 "processingFailed": "பணம் செலுத்துதல் செயலாக்கம் தோல்வியடைந்தது."
             }
-        }
+        },
+        "validation_error": "சரிபார்ப்பு பிழை",
+        "validation_error_with_count": "சரிபார்ப்பு பிழை ({count} புலங்கள்)"
     }
 } 
