--- a/client/i18n/lang/vi.json
+++ b/client/i18n/lang/vi.json
@@ -66,6 +66,8 @@
                 "failedIntent": "Không thể tạo ý định thanh toán.",
                 "processingFailed": "Xử lý thanh toán không thành công."
             }
-        }
+        },
+        "validation_error": "Lỗi xác thực",
+        "validation_error_with_count": "Lỗi xác thực ({count} trường)"
     }
 } 
